# fakedata_generator

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  NOTICE  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  generator-proposal.md
.github/workflows/: codecov.yml  rust-clippy.yml
assets/brand/: banner.afdesign  social_cards.sketch
benches/: generator_benchmark.rs
data/: emojis.json
helpers/: add-corpora-dataset.sh  add-emojis.nu  corpora-data.sh  coverage.sh  update-tlds.sh
src/: corpora.rs  data.rs  lib.rs
src/corpora/: data.rs
src/data/: corpora.rs  emojis.rs  primes.rs  tlds.rs
