[package]
name = "fakedata_generator"
version = "0.4.1"
authors = ["Kevin Gimbel <hallo@kevingimbel.com>"]
edition = "2021"
license = "MIT"
description = "Generate fake data with various generators."
repository = "https://github.com/kevingimbel/fakedata_generator"

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
passt = "0.3.0"
