[package]
name = "fakedata_generator"
version = "0.6.0"
authors = ["Kevin Gimbel <kevin@gimbel.dev>"]
edition = "2024"
license = "MIT"
description = "Generate fake data with various generators."
repository = "https://github.com/KevinGimbel/fakedata_generator"

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
passt = "0.3.0"
